--- a/使用指南.md
+++ b/使用指南.md
@@ -1,2 +1,11 @@
 # 使用指南
 
+### 一、 项目结构  
+   与egg官方项目结构一致，其中controller和router文件夹做了分类，foreend（前端api）、back（end后端管理预留）、微信api(wechat)
+
+### 二、 参考开发流程（）
+    （1）写路由，先在app/router.js文件配置模块路由，再在app/router文件夹中写详细路由
+    （2）写控制器controller，在控制器中一般需要获取前端传过来的参数，凭借请求调用service，返回结果给前端。
+    （3）写服务service，一般做具体的操作，上传数据获取数据等等，返回结果给controller。   
+    
+    
