--- a/项目搭建笔记.md
+++ b/项目搭建笔记.md
@@ -30,7 +30,8 @@
 #### 2.3 egg功能模块划分、用户返回状态的集成
      参考：https://github.com/sfyr111/egg-commerce
      
-#### 具体使用方法待写（以下功能都已在express中实现，在egg中用法和express用法一致）
+#### 具体使用方法待写，不影响mock数据逻辑的编写（以下功能都已在express中实现，在egg中用法和express用法一致）
+     mockjs 模块模拟数据
      ioredis缓存模块
      officegen 文档处理模块
      lodash 工具类
