--- a/项目搭建笔记.md
+++ b/项目搭建笔记.md
@@ -5,7 +5,7 @@
 
 
 ### 二、egg使用的问题及解决方法
-##### 2.1 egg Post请求处理跨域问题。（参考网址：https://cnodejs.org/topic/59780bba68aa87c774e5ebf7）
+##### 2.1 egg Post请求处理跨域问题。（参考网址：https://cnodejs.org/topic/59780bba68aa87c774e5ebf7 ）
      （1）安装egg-cors模块，并在plugin.js进行如下配置、
        exports.cors = {
            enable: true,
@@ -29,11 +29,16 @@
       
 #### 2.3 egg功能模块划分、用户返回状态的集成
      参考：https://github.com/sfyr111/egg-commerce
+ 
+#### 2.4 egg集成与java交互的nzd模块
      
+
 #### 具体使用方法待写，不影响mock数据逻辑的编写（以下功能都已在express中实现，在egg中用法和express用法一致）
+     可以先参看另外两个工程 log4js_express 和ioredis_ioredis
      mockjs 模块模拟数据
      ioredis缓存模块
      officegen 文档处理模块
      lodash 工具类
      moment 时间处理模块
      jsonwebtoken token生成模块
+     
