--- a/使用指南.md
+++ b/使用指南.md
@@ -3,9 +3,102 @@
 ### 一、 项目结构  
    与egg官方项目结构一致，其中controller和router文件夹做了分类，foreend（前端api）、back（end后端管理预留）、微信api(wechat)
 
-### 二、 参考开发流程（）
-    （1）写路由，先在app/router.js文件配置模块路由，再在app/router文件夹中写详细路由
-    （2）写控制器controller，在控制器中一般需要获取前端传过来的参数，凭借请求调用service，返回结果给前端。
-    （3）写服务service，一般做具体的操作，上传数据获取数据等等，返回结果给controller。   
+### 二、 开发流程（不局限，供参考）
+    2.1 写路由，先在app/router.js文件配置模块路由，再在app/router文件夹中写详细路由
+    2.2 写控制器controller，在控制器中一般需要获取前端传过来的参数，凭借请求调用service，返回结果给前端。
+    2.3 写服务service，一般做具体的操作，上传数据获取数据等等，返回结果给controller。   
     
+    
+### 三、 开发流程实例(Student的增删改查)
+    3.1写路由，Student增删改查路由
+    
+    
+    `
+    3.1.1 在app/router.js写路由入口
+    //学生模块
+        require('./router/foreend/student')(app);
+    3.1.2 在foreend新建student.js路由文件，并写详细路由过程
+    //学生增删改查
+        router.post('/student/createStudent', controller.foreend.student.createStudent);
+        router.get('/student/getStudent/:id', controller.foreend.student.getStudent);
+        router.post('/student/updateStudent', controller.foreend.student.updateStudent);
+        router.get('/student/delStudent/:id', controller.foreend.student.delStudent);
+    //获取多条学生记录
+        router.get('/student/getStudentList', controller.foreend.student.getStudentList);
+        
+        
+    3.2编写controller，对象增删改查以及获取对象列表
+        async createStudent() {
+            //1、获取用户post的参数
+            //2、参数校验
+            //3、调用service，存入数据
+            //4、做响应与前端交互
+        ctx.helper.success({ctx,msg,res});
+          }
+        async updateStudent() {
+            ctx.helper.success({ctx,msg,res});
+          }
+        async getStudent() {
+            ctx.helper.success({ctx,msg,res});
+          }
+        async delStudent() {
+            ctx.helper.success({ctx,msg,res});
+          }
+        async getStudentList() {
+            //this.ctx.body = 'hi, egg';
+            const { ctx,service } = this;
+            //获取body请求参数
+            //const mobile= ctx.request.body.mobile;
+            /* const res = await service.student.list();
+             this.ctx.body = res;*/
+            const res={data:'this is data'};
+            const msg=ctx.response.ResponseMsg.NO_AUTH;
+            if(1){
+              //如果用户提交参数有误，需要返回异常的情况
+              ctx.helper.fail({ctx,msg,res});
+            }else{}
+            ctx.helper.success({ctx,msg,res});
+          }
+    
+    3.3编写service，实现具体操作service
+    // 创建用户
+          async createStudent(student) {
+            //获取用户提交的对象
+            var student=student;
+            //将数据通过nzd传给java后端
+            const result={
+            };
+            return result;
+          }
+          // 根据id获取用户
+          async getStudent(id) {
+            const result={
+            };
+            return result;
+          }
+        
+          // 根据id更新student
+          async getStudent(id,student) {
+            const result={
+            };
+            return result;
+          }
+        
+          // 根据id删除student
+          async delStudent(id) {
+            const result={
+            };
+            return result;
+          }
+        
+          // 获取所有用户列表
+          async getStudentList() {
+            const result={
+            };
+            return result;
+          }
+    `
+
+### 四、接口文档（供参考，如果觉得有不合适的地方大家一起讨论确定，没意见可以直接用）
+    参考： http://sunshinelzb.coding.me/
     
