--- a/使用指南.md
+++ b/使用指南.md
@@ -10,11 +10,8 @@
     
     
 ### 三、 开发流程实例(Student的增删改查)
-    3.1写路由，Student增删改查路由
-    
-    
-    `
-    3.1.1 在app/router.js写路由入口
+#####3.1写路由，Student增删改查路由
+######3.1.1 在app/router.js写路由入口
     //学生模块
         require('./router/foreend/student')(app);
     3.1.2 在foreend新建student.js路由文件，并写详细路由过程
@@ -25,9 +22,9 @@
         router.get('/student/delStudent/:id', controller.foreend.student.delStudent);
     //获取多条学生记录
         router.get('/student/getStudentList', controller.foreend.student.getStudentList);
-        
-        
-    3.2编写controller，对象增删改查以及获取对象列表
+       
+       
+#####3.2编写controller，对象增删改查以及获取对象列表
         async createStudent() {
             //1、获取用户post的参数
             //2、参数校验
@@ -60,7 +57,7 @@
             ctx.helper.success({ctx,msg,res});
           }
     
-    3.3编写service，实现具体操作service
+#####3.3编写service，实现具体操作service
     // 创建用户
           async createStudent(student) {
             //获取用户提交的对象
