--- a/使用指南.md
+++ b/使用指南.md
@@ -11,7 +11,7 @@
     
 ### 三、 开发流程实例(Student的增删改查)
 ##### 3.1写路由，Student增删改查路由
-###### 3.1.1 在app/router.js写路由入口
+##### 3.1.1 在app/router.js写路由入口
 
     //学生模块
         require('./router/foreend/student')(app);
