提交操作指南和搭建过程描述

--- a/使用指南.md
+++ b/使用指南.md
@@ -99,7 +99,7 @@
           }
     `
 
-### 四、接口文档（供参考，如果觉得有不合适的地方大家一起讨论确定，没意见可以直接用）
+### 四、接口文档（供参考，如果觉得有不合适的地方大家一起讨论确定，没问题先按照这个用）
 
     参考： http://sunshinelzb.coding.me/
     
