--- a/项目搭建及常见问题处理.md
+++ b/项目搭建及常见问题处理.md
@@ -31,7 +31,20 @@
      参考：https://github.com/sfyr111/egg-commerce
  
 #### 2.4 egg集成与java交互的nzd模块
+
+#### 2.5 egg处理post请求，无法获取请求体参数问题
+
+    `
+    //关闭默认的安全校验
+    config.security={
+      csrf: false,
+     // domainWhiteList: [ 'http://localhost:8080' ]
+    };
      
+    //获取body请求参数
+     //const mobile= ctx.request.body.mobile;
+    `
+
 
 #### 具体使用方法待写，不影响mock数据逻辑的编写（以下功能都已在express中实现，在egg中用法和express用法一致）
      可以先参看另外两个工程 log4js_express 和ioredis_ioredis
